--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "react-navigation": "^2.18.2"
+    "react-navigation": "^2.18.2",
+    "react-native-table-component": "^1.1.8",
+    "react-table": "^6.8.6"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
